# rs-stripe

./: Cargo.toml
src/: errors.rs  main.rs
src/client/: client.rs
src/stripe/: mod.rs  stripe.rs
src/stripe/v1/: mod.rs  v1.rs
src/stripe/v1/charges/: charges.rs  mod.rs
src/stripe/v1/payment_intents/: mod.rs  payment_intent.rs
src/stripe/v2/: core.rs  mod.rs  v2.rs
src/stripe/v2/accounts/: account_request.rs  mod.rs
